rss feed does not display several authors
Categories
(MailNews Core :: Feed Reader, defect)
Tracking
(Not tracked)
People
(Reporter: bongilles, Assigned: alta88)
References
(Depends on 1 open bug)
Details
Attachments
(6 files, 2 obsolete files)
|
3.40 KB,
patch
|
jorgk-bmo
:
review+
|
Details | Diff | Splinter Review |
|
15.32 KB,
patch
|
mkmelin
:
review+
|
Details | Diff | Splinter Review |
|
1.20 KB,
patch
|
frg
:
review+
|
Details | Diff | Splinter Review |
|
1.88 KB,
patch
|
jorgk-bmo
:
review+
|
Details | Diff | Splinter Review |
|
1.51 KB,
patch
|
jorgk-bmo
:
review+
|
Details | Diff | Splinter Review |
|
1.36 KB,
patch
|
jorgk-bmo
:
review+
|
Details | Diff | Splinter Review |
Updated•8 years ago
|
Comment 1•8 years ago
|
||
Comment 3•8 years ago
|
||
Add support for multiple authors in Atom feeds. This also fixes Bug 1522156, as an email-less author must be angle bracket enclosed and function as an addr-spec (even though it isn't, per spec, and groups syntax can't be used either), for gloda to work.
A separate bug is for gloda support of multiple authors.
Indicate multiple authors in threadpane From with "et al.", the well known abbreviation for academic and legal etc. citations in en locales.
Comment 7•7 years ago
|
||
Comment 8•7 years ago
|
||
(In reply to Magnus Melin [:mkmelin] from comment #8)
Comment on attachment 9042234 [details] [diff] [review]
authorsAtom.patchReview of attachment 9042234 [details] [diff] [review]:
Some comments below, but... then I realized, you should better just use
existing functionality to build the mime header. Like lightning does in
encodeMimeHeader:
https://searchfox.org/comm-central/source/calendar/lightning/modules/
ltnInvitationUtils.jsm#511
What? We currently store spec compliant UTF8 (RFC6532) in fields and everything works fine. Why would you propose converting to an RFC2047 encoding:
"=?UTF-8?B?PEFuZHJlYXMgR8O2YmVsPiwgPFRpbW8gS8O2dHppbmc+LCA8TWFy?= =?UTF-8?Q?tin_S=2e_Krejca=3e?="
instead of:
"<Andreas Göbel>, <Timo Kötzing>, <Martin S. Krejca>"
RFC2047 encoding should be killed with fire in this day and age. Further, the goal in feeds is to remove xpcom, not add more uses of it. And that function doesn't pretty format, which is a goal of createHeaderStrFromArray() when viewing source for messages. Finally, cargo culting stuff just because it's in lightning is a non reason.
The other nits are updated.
| Assignee | ||
Comment 10•7 years ago
|
||
Comment 11•7 years ago
|
||
Comment 12•7 years ago
|
||
Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/89417f102fda
Support multiple authors in RSS feeds. r=mkmelin,jorgk CLOSED TREE
Comment 13•7 years ago
|
||
Landed merged patch with the debug prints removed from nsMsgDBView.cpp.
Comment 14•7 years ago
|
||
Please submit a patch to fix the linting failures :-(
Comment 15•7 years ago
|
||
Adds the equivalent string for SeaMonkey
Comment 16•7 years ago
|
||
Oops, we forgot :-(
| Assignee | ||
Comment 17•7 years ago
|
||
jorg, i hadn't asked for checkin yet since i was still pondering managing this given the gloda search issues and another issue perhaps related to an old friend (Bug 1023285), and was leaning to waiting until those were sorted. but no worries.
| Assignee | ||
Comment 18•7 years ago
|
||
| Assignee | ||
Comment 19•7 years ago
|
||
Comment 20•7 years ago
|
||
(In reply to alta88 from comment #17)
jorg, i hadn't asked for checkin yet since i was still pondering managing this given the gloda search issues and another issue perhaps related to an old friend (Bug 1023285), and was leaning to waiting until those were sorted. but no worries.
My apologies! You know me situation, always hunting for landable patches :-( - You are quite right, it's not ready until the author says so. Thanks for the lint patch, I couldn't make much sense of Missing JSDoc, now I see the linter even reads comments.
Comment 21•7 years ago
|
||
Updated•7 years ago
|
Comment 22•7 years ago
|
||
Comment 23•7 years ago
|
||
Comment 24•7 years ago
|
||
I'm pretty sure this test failure comes from here:
TEST-UNEXPECTED-FAIL | comm/mailnews/base/test/unit/test_nsMsgDBView_headerValues.js | real_test/< - [real_test/< : 63] "John Doe et al." == "John Doe"
Please submit a fix.
| Assignee | ||
Comment 25•7 years ago
|
||
oops. xpcshell test verified locally.
Comment 26•7 years ago
|
||
Comment 27•7 years ago
|
||
Comment 28•7 years ago
|
||
Another test affected. Was this landed without a try run?
Comment 29•7 years ago
|
||
Comment 30•7 years ago
|
||
https://hg.mozilla.org/comm-central/rev/8b3ebdb0d5381bd2c773215e89a3c1b76edd6f1f
adapt test-display-name.js to displaying multiple recipients in From column. r=jorgk
Description
•