Bug 1423487 - Support multiple authors in RSS feeds. r=mkmelin,jorgk CLOSED TREE

--HG--
extra : amend_source : 8ed2437a4016960911934b2db21db0a3246f0c57