mailnews/base/src/nsMsgDBView.cpp
@@ -409,11 +409,12 @@ nsMsgDBView::FetchAuthor(nsIMsgDBHdr * aHdr,
   nsCString headerCharset;
   aHdr->GetEffectiveCharset(headerCharset);
 
-  nsCString emailAddress;
   nsString name;
-  ExtractFirstAddress(EncodedHeader(author, headerCharset.get()),
-                      name,
-                      emailAddress);
+  nsCString emailAddress;
+  nsCOMArray<msgIAddressObject> addresses = EncodedHeader(author, headerCharset.get());
+  bool multipleAuthors = addresses.Length() > 1;
+
+  ExtractFirstAddress(addresses, name, emailAddress);
 
   if (showCondensedAddresses)
     GetDisplayNameInAddressBook(emailAddress, aSenderString);
@@ -437,6 +438,12 @@ nsMsgDBView::FetchAuthor(nsIMsgDBHdr * aHdr,
         aSenderString.Append('>');
       }
     }
+  }
+
+  if (multipleAuthors)
+  {
+    aSenderString.AppendLiteral(" ");
+    aSenderString.Append(GetString(u"andOthers"));
   }
 
   UpdateCachedName(aHdr, "sender_name", aSenderString);
